2020-07-27  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/RootDevice.java: Initial writing.

2020-07-26  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
	Created RequestHandler and ResponseHandler instances to handle
	NOTIFY requests and M-SEARCH responses, respectively.

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added register(SSDPDiscoveryService) and
	unregister(SSDPDiscoveryService) methods to Listener interface.
	Added abstract (inner) RequestHandler and ResponseHandler base
	classes.

	* Replaced SSDPMessage class hierarchy with SSDPRequest and
	SSDPResponse factory methods.

2020-07-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added DatagramSocket parameter to Listener methods.
	Added delay parameter to multicast and send methods.

2020-07-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Use a separate DatagramSocket for sending.
	Condition SO_TIMEOUT in receive(DatagramSocket).

2020-07-23  Allen D. Ball  <ball@hcf.dev>

	* Re-factored SSDPMessage hierarchy.

2020-07-22  Allen D. Ball  <ball@hcf.dev>

	* Added SSDPDiscoveryResponse, SSDPNotifyAliveRequest, and
	SSDPNotifyByeByeRequest.

	* Converted SSDPDiscoveryThread to SSDPDiscoveryService and use
	Java 7 MulticastSocket.

2020-07-21  Allen D. Ball  <ball@hcf.dev>

	* Refactored SSDPDiscoverTask to SSDPTask and added <ssdp-listen/>
	Ant Task and target.

	* src/main/java/ball/upnp/ssdp/SSDPMessage.java:
	Added toDatagramPacket(InetSocketAddress) method.

	* pom.xml: Started development 3.0-SNAPSHOT.

2020-07-15  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.0.0.

2020-07-05  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/Device.java:
	Removed iconList and added presentationURL properties.

2020-06-29  Allen D. Ball  <ball@hcf.dev>

	* Re-factored Device and Service to Device, AnnotatedDevice, and